--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <!-- MySQL Driver -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
     <!-- H2 Database (in-memory for development) -->
     <dependency>
       <groupId>com.h2database</groupId>
